redirect properly via logo and remove render deploy resources

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="head">
       <div class="headerobjectswrapper">
         <div class="logobox">
-          <%= link_to homepage_path  do %>
+          <%= link_to "/" do %>
             <%= image_tag("youtalkintome.png", size: "56x56") %>
           <% end %>
         </div>
